desenv_tests/test-assets/field/failure/default_env_not_string.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(default(env = 0))]
    field: String
}

fn main(){}